; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_output.c_output_damage_whole.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_output.c_output_damage_whole.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_output = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @output_damage_whole(%struct.sway_output* %0) #0 {
  %2 = alloca %struct.sway_output*, align 8
  store %struct.sway_output* %0, %struct.sway_output** %2, align 8
  %3 = load %struct.sway_output*, %struct.sway_output** %2, align 8
  %4 = icmp ne %struct.sway_output* %3, null
  br i1 %4, label %5, label %20

5:                                                ; preds = %1
  %6 = load %struct.sway_output*, %struct.sway_output** %2, align 8
  %7 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %20

10:                                               ; preds = %5
  %11 = load %struct.sway_output*, %struct.sway_output** %2, align 8
  %12 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %10
  %16 = load %struct.sway_output*, %struct.sway_output** %2, align 8
  %17 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = call i32 @wlr_output_damage_add_whole(i64 %18)
  br label %20

20:                                               ; preds = %15, %10, %5, %1
  ret void
}

declare dso_local i32 @wlr_output_damage_add_whole(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
